--- a/movie_data_analysis/Part_3_Data_Ceaning_and_Tidy_upmessy Datasets(Movies Dataset).ipynb
+++ b/movie_data_analysis/Part_3_Data_Ceaning_and_Tidy_upmessy Datasets(Movies Dataset).ipynb
@@ -603,8 +603,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Dropping irrelevant columns \n",
+    "\n",
     "df.drop(columns = ['adult','imdb_id','original_title','video','homepage'], inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1050,6 +1059,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handling stringified Json columns \n",
+    "\n",
+    "\n",
     "import json \n",
     "import ast\n",
     "# ast abstract syntax trees\n"
@@ -1529,6 +1541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#handling stringified json column part 2 \n",
     "import numpy as np \n"
    ]
   },
@@ -1695,6 +1708,8 @@
     }
    ],
    "source": [
+    "#Flattening Nested Columns\n",
+    "\n",
     "df.belongs_to_collection\n",
     "# say we want just the name column from the nested column"
    ]
@@ -2630,7 +2645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#changing numerical columns "
+    "#cleaning numerical columns "
    ]
   },
   {
@@ -2703,6 +2718,7 @@
     }
    ],
    "source": [
+    "\n",
     "df.budget.astype('float') # here we have mixed datatypes "
    ]
   },
